Updated header layout to flow and align correctly.

--- a/_scss/partials/_footer_layout.scss
+++ b/_scss/partials/_footer_layout.scss
@@ -48,7 +48,7 @@
     @include flex(1 0 auto);
 
     a {
-      background-color: rgba($black, .2);
+      background-color: rgba($white, .3);
       padding: $space-one-half;
       display: inline-block; /* non-flexbox browsers */
       @include display-flex(flex);
